# cpu-usage-tracker

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  cut.c  main.c  proc_stat.h  utils.h
analyzer/: analyzer.c  analyzer.h  analyzer_test.c
proc_stat/: proc_stat.c  proc_stat.h  proc_stat_test.c
proc_stat/test_srcs/: proc_stat_example1.txt
reader/: reader.c  reader.h  reader_test.c
ring_buffer/: ring_buffer.c  ring_buffer.h  ring_buffer_test.c
src/: cut.c  cut.h  globals.h  utils.h
src/analyzer/: analyzer.c  analyzer.h
src/logger/: logger.c  logger.h  logger_test.c
src/reader/: reader.c  reader.h  reader_test.c
src/reader/test_srcs/: proc_stat_corrupted.txt  proc_stat_example2.txt
src/ring_buffer/: ring_buffer.c  ring_buffer.h  ring_buffer_test.c
src/watchdog/: watchdog.c  watchdog.h
